docs: added swagger docs for auth module
