# modules/auth/api/v1/controller/controller.go
@@ -21,6 +21,14 @@ func new(params Params) *Controller {
 	}
 }
 
+// @Summary		Login
+// @Description	Authenticate user and return a pair of tokens as cookies
+// @Tags			Auth V1
+// @Accept			json
+// @Produce		json
+// @Param			data	body		dto.LoginRequest	true	"Login credentials"
+// @Success		200		{object}	global.Response[dto.LoginResponse]
+// @Router			/v1/auth/login [post]
 func (ctrl *Controller) Login(c *fiber.Ctx) error {
 	req := middleware.ZelebrateRequest[dto.LoginRequest](c)
 	user, accessToken, refreshToken := ctrl.service.Login(c.Context(), req.Email, req.Password)
@@ -31,6 +39,14 @@ func (ctrl *Controller) Login(c *fiber.Ctx) error {
 	})
 }
 
+// @Summary		Register
+// @Description	Register a new user and return a pair of tokens as cookies
+// @Tags			Auth V1
+// @Accept			json
+// @Produce		json
+// @Param			data	body		dto.RegisterRequest	true	"Registration data"
+// @Success		201		{object}	global.Response[dto.RegisterResponse]
+// @Router			/v1/auth/register [post]
 func (ctrl *Controller) Register(c *fiber.Ctx) error {
 	req := middleware.ZelebrateRequest[dto.RegisterRequest](c)
 	user, accessToken, refreshToken := ctrl.service.Register(c.Context(), *req)
@@ -41,6 +57,13 @@ func (ctrl *Controller) Register(c *fiber.Ctx) error {
 	})
 }
 
+// @Summary		Get current user
+// @Description	Get the currently authenticated user
+// @Tags			Auth V1
+// @Accept			json
+// @Produce		json
+// @Success		200	{object}	global.Response[User]
+// @Router			/v1/auth/current [get]
 func (ctrl *Controller) CurrentUser(c *fiber.Ctx) error {
 	user := c.Locals(global.CtxUser).(*User)
 	return c.JSON(global.Response[User]{
@@ -49,6 +72,13 @@ func (ctrl *Controller) CurrentUser(c *fiber.Ctx) error {
 	})
 }
 
+// @Summary		Logout
+// @Description	Logout the current user
+// @Tags			Auth V1
+// @Accept			json
+// @Produce		json
+// @Success		200	{object}	global.Response[any]
+// @Router			/v1/auth/logout [post]
 func (ctrl *Controller) Logout(c *fiber.Ctx) error {
 	session.ClearCookieCredentials(c)
 	return c.Status(fiber.StatusOK).JSON(global.Response[any]{
