# modules/users/api/v1/controller/controller.go
@@ -22,15 +22,14 @@ func new(params Params) *Controller {
 	}
 }
 
-// CreateUser godoc
-// @Summary Create a new user
-// @Description Create a new user with the input payload
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param data body dto.CreateUserRequest true "User data"
-// @Success 201 {object} global.Response[dto.CreateUserResponse]
-// @Router /users [post]
+// @Summary		Create a new user
+// @Description	Create a new user with the input payload
+// @Tags			Users V1
+// @Accept			json
+// @Produce		json
+// @Param			data	body		dto.CreateUserRequest	true	"User data"
+// @Success		201		{object}	global.Response[dto.CreateUserResponse]
+// @Router			/v1/users [post]
 func (ctrl *Controller) CreateUser(c *fiber.Ctx) error {
 	req := middleware.ZelebrateRequest[dto.CreateUserRequest](c)
 	result := ctrl.service.CreateUser(c.Context(), models.User{
@@ -44,16 +43,15 @@ func (ctrl *Controller) CreateUser(c *fiber.Ctx) error {
 	})
 }
 
-// GetUsers godoc
-// @Summary Get all users
-// @Description Get a list of all users
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param page query int false "Page number"
-// @Param limit query int false "Page size"
-// @Success 200 {object} global.Response[dto.GetUsersReponse]
-// @Router /users [get]
+// @Summary		Get all users
+// @Description	Get a list of all users
+// @Tags			Users V1
+// @Accept			json
+// @Produce		json
+// @Param			page	query		int	false	"Page number"
+// @Param			limit	query		int	false	"Page size"
+// @Success		200		{object}	global.Response[dto.GetUsersReponse]
+// @Router			/v1/users [get]
 func (ctrl *Controller) GetUsers(c *fiber.Ctx) error {
 	result := ctrl.service.GetUsers(c.Context(), c.Locals(fqm.CtxKey).(fq.Result))
 	return c.JSON(global.Response[dto.GetUsersReponse]{
@@ -62,15 +60,14 @@ func (ctrl *Controller) GetUsers(c *fiber.Ctx) error {
 	})
 }
 
-// GetUserByID godoc
-// @Summary Get user by ID
-// @Description Get a user by their ID
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param id path string true "User ID"
-// @Success 200 {object} global.Response[dto.GetUserResponse]
-// @Router /users/{id} [get]
+// @Summary		Get user by ID
+// @Description	Get a user by their ID
+// @Tags			Users V1
+// @Accept			json
+// @Produce		json
+// @Param			id	path		string	true	"User ID"
+// @Success		200	{object}	global.Response[dto.GetUserResponse]
+// @Router			/v1/users/{id} [get]
 func (ctrl *Controller) GetUserByID(c *fiber.Ctx) error {
 	req := middleware.ZelebrateRequest[dto.GetUserRequest](c)
 	result := ctrl.service.GetUserByID(c.Context(), req.ID)
@@ -80,16 +77,15 @@ func (ctrl *Controller) GetUserByID(c *fiber.Ctx) error {
 	})
 }
 
-// UpdateUserByID godoc
-// @Summary Update user by ID
-// @Description Update a user's information by their ID
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param id path string true "User ID"
-// @Param data body dto.UpdateUserRequest true "User data"
-// @Success 200 {object} global.Response[dto.GetUserResponse]
-// @Router /users/{id} [patch]
+// @Summary		Update user by ID
+// @Description	Update a user's information by their ID
+// @Tags			Users V1
+// @Accept			json
+// @Produce		json
+// @Param			id		path		string					true	"User ID"
+// @Param			data	body		dto.UpdateUserRequest	true	"User data"
+// @Success		200		{object}	global.Response[dto.GetUserResponse]
+// @Router			/v1/users/{id} [patch]
 func (ctrl *Controller) UpdateUserByID(c *fiber.Ctx) error {
 	req := middleware.ZelebrateRequest[dto.UpdateUserRequest](c)
 	result := ctrl.service.UpdateUserByID(c.Context(), req.ID, models.User{
@@ -103,15 +99,14 @@ func (ctrl *Controller) UpdateUserByID(c *fiber.Ctx) error {
 	})
 }
 
-// DeleteUserByID godoc
-// @Summary Delete user by ID
-// @Description Delete a user by their ID
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param id path string true "User ID"
-// @Success 200 {object} global.Response[any]
-// @Router /users/{id} [delete]
+// @Summary		Delete user by ID
+// @Description	Delete a user by their ID
+// @Tags			Users V1
+// @Accept			json
+// @Produce		json
+// @Param			id	path		string	true	"User ID"
+// @Success		200	{object}	global.Response[any]
+// @Router			/v1/users/{id} [delete]
 func (ctrl *Controller) DeleteUserByID(c *fiber.Ctx) error {
 	req := middleware.ZelebrateRequest[dto.DeleteUserRequest](c)
 	ctrl.service.DeleteUserByID(c.Context(), c.Params(req.ID))
